# java-language-server

./: .bazelignore  .bazelrc  .gitignore  .npmrc  Cargo.toml  LICENSE  MODULE.bazel  README.md  TODOS.md  ide-support.sh  jre.json  maven_install.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  reveal-node-modules.sh
.devcontainer/: devcontainer.json
.devcontainer/feature-bazel/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
build_defs/: java_toolchains.bzl  junit5_test_suite.bzl
build_defs/java_plugins/: BUILD.bazel
build_defs/protoc/: BUILD.bazel
build_defs/rollup_bundle/: BUILD.bazel  package.json
build_defs/rollup_bundle/src/: main.ts
build_defs/virtual_path/: BUILD.bazel  java.bzl  maven.bzl  virtual_path.bzl
build_defs/virtual_path/src/: main.rs
build_defs/virtual_path/sui/: main.rs
build_defs/virtual_path/wrap/: main.rs
build_defs/vsce_package/src/: main.ts
code_analysis/: BUILD.bazel  Compilation.java  CompilationTest.java  README.md
code_analysis/file_managers/: InMemoryJavaFileManager.java  InMemoryJavaFileManagerTest.java  README.md  StringSourceJavaFileObject.java  StringSourceJavaFileObjectTest.java
code_analysis/main/: BUILD.bazel  Compilation.java
examples/: BUILD.bazel
extension/: BUILD.bazel  package.json
extension/src/: download-jre.ts  extension.ts  main.ts  scopes.ts  textMate.ts
extension/vsix/: BUILD.bazel  README.md  jre.json  package.json
language_server/: BUILD.bazel
language_server/src/main/: BUILD.bazel
language_server/src/main/java/org/javacs/: InferConfig.java
language_server/src/main/protobuf/: analysis.proto  analysis_v2.proto
language_server/src/test/: BUILD.bazel
lib/: extension.ts
scripts/: download_linux_jdk.sh  download_mac_jdk.sh  download_windows_jdk.sh
server/src/main/: BUILD.bazel
server/src/main/java/org/javacs/: CompileBatch.java  FindHelper.java  InferConfig.java  JavaCompilerService.java  Main.java  ReusableCompiler.java
server/src/main/java/org/javacs/action/: CodeActionProvider.java
server/src/main/java/org/javacs/hover/: FindHoverElement.java  HoverProvider.java
server/src/main/java/org/javacs/lsp/: LSP.java
server/src/main/java/org/javacs/util/: ChildProcess.java
server/src/main/protobuf/: analysis.proto  analysis_v2.proto
server/src/test/: BUILD.bazel  test_with_path.bzl
server/src/test/java/org/javacs/: AllTests.java  ClassesTest.java  CompletionsTest.java  FindResource.java  HoverTest.java  IncrementalCompileTest.java  InferBazelConfigTest.java  InferConfigTest.java  JavaCompilerServiceTest.java  JavaDebugServerTest.java  JavaLanguageServerTest.java  LanguageServerFixture.java  SourceFileManagerTest.java
src/main/java/org/javacs/: JavaLanguageServer.java  LogHandler.java
src/main/java/org/javacs/lsp/: LSP.java  LogMessageParams.java
