[package]
name = "java-language-server"
version = "0.1.0"
edition = "2021"
publish = false

# Target to allow Rules Rust to parse
[lib]
path = "./build_defs/virtual_path/wrap/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
