load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "main",
    srcs = glob(["**/*.java"]),
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
    add_exports = [
        "jdk.compiler/com.sun.tools.javac.api",
        "jdk.compiler/com.sun.tools.javac.code",
        "jdk.compiler/com.sun.tools.javac.comp",
        "jdk.compiler/com.sun.tools.javac.main",
        "jdk.compiler/com.sun.tools.javac.tree",
        "jdk.compiler/com.sun.tools.javac.model",
        "jdk.compiler/com.sun.tools.javac.util",
    ],
    add_opens = [
        "jdk.compiler/com.sun.tools.javac.api",
    ],
)
