load("@rules_rust//rust:defs.bzl", "rust_binary")
load(":java.bzl", "java_bin")

rust_binary(
    name = "sui",
    srcs = glob(["sui/**/*.rs"]),
    deps = [
        "@crates//:clap",
        "@crates//:libsui",
    ],
)

rust_binary(
    name = "wrap",
    srcs = glob(["wrap/**/*.rs"]),
    deps = [
        "@crates//:libsui",
    ],
)

java_bin(
    name = "java",
)
