load("@rules_java//java:defs.bzl", "java_library")

add_exports = [
    "jdk.compiler/com.sun.tools.javac.api",
    "jdk.compiler/com.sun.tools.javac.code",
    "jdk.compiler/com.sun.tools.javac.comp",
    "jdk.compiler/com.sun.tools.javac.main",
    "jdk.compiler/com.sun.tools.javac.tree",
    "jdk.compiler/com.sun.tools.javac.model",
    "jdk.compiler/com.sun.tools.javac.util",
]
add_opens = [
    "jdk.compiler/com.sun.tools.javac.api",
]

java_library(
    name = "main",
    srcs = glob(["**/*.java"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
    ],
    add_exports = add_exports,
    add_opens = add_opens,
    plugins = [
        "//build_defs/java_plugins:nullaway",
    ],
)
