load("@aspect_bazel_lib//lib:copy_directory.bzl", "copy_directory")
load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:output_files.bzl", "output_files")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//build_defs/vsce_package:vsce_package.bzl", "vsce_package")
load("//build_defs:java_toolchains.bzl", "MS_JDK")

write_file(
    name = "jre_json",
    out = "jre.json",
    content = json.encode_indent(MS_JDK, indent = "    "),
)

# Copy bundled sources to src/
output_files(
    name = "bundle_chunks_ref",
    target = "//extension:bundle",
    paths = ["extension/bundle/chunks"],
)
copy_directory(
    name = "copy_bundle_chunks",
    src = ":bundle_chunks_ref",
    out = "src/chunks",
)
copy_file(
    name = "copy_bundle_main",
    src = "//extension:bundle/main.js",
    out = "src/main.js",
)

# Copy jars
copy_file(
    name = "copy_language_server_jar",
    src = "//server/src/main:language_server.jar",
    out = "language-server.jar",
)
copy_file(
    name = "copy_debug_server_jar",
    src = "//server/src/main:debug_server.jar",
    out = "debug-server.jar",
)

# Copy license
copy_file(
    name = "copy_license",
    src = "//:LICENSE",
    out = "LICENSE",
)

vsce_package(
    name = "java_bazel_language_support",
    srcs = glob(["**"], exclude = ["BUILD.bazel"]) + [
        ":copy_bundle_chunks",
        ":copy_bundle_main",
        ":copy_license",
        ":copy_language_server_jar",
        ":copy_debug_server_jar",
        ":jre_json",
    ],
    in_dir = "./",
)
