load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

java_library(
    name = "main_lib",
    srcs = glob(["java/**/*.java"]),
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_protobuf_protobuf_java",
        ":analysis_java_proto",
    ],
    add_exports = [
        "jdk.compiler/com.sun.tools.javac.api",
        "jdk.compiler/com.sun.tools.javac.code",
        "jdk.compiler/com.sun.tools.javac.comp",
        "jdk.compiler/com.sun.tools.javac.main",
        "jdk.compiler/com.sun.tools.javac.tree",
        "jdk.compiler/com.sun.tools.javac.model",
        "jdk.compiler/com.sun.tools.javac.util",
    ],
    add_opens = [
        "jdk.compiler/com.sun.tools.javac.api",
    ],
    visibility = ["//language_server/src/test:__pkg__"]
)

proto_library(
    name = "build_proto",
    srcs = [
        "protobuf/build.proto",
    ],
)

proto_library(
    name = "analysis_v2_proto",
    srcs = ["protobuf/analysis_v2.proto"],
    deps = [":build_proto"],
)

proto_library(
    name = "analysis_v1_proto",
    srcs = ["protobuf/analysis.proto"],
    deps = [":build_proto"],
)

java_proto_library(
    name = "analysis_java_proto",
    deps = [
        ":analysis_v1_proto",
        ":analysis_v2_proto",
    ],
)
